# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
header/: Camera.h  Image.h  ImageFile.h  IndexBuffer.h  Renderer.h  Scene.h  Shader.h  Texture2D.h  VertexArray.h  VertexBuffer.h
resources/shaders/: raytracing.glsl
src/: Camera.cpp  Image.cpp  ImageFile.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
